--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,13 @@ tensorboard==1.15.0
 threadpoolctl==3.1.0
 tifffile==2021.11.2
 torch
-torchaudio==0.10.1+rocm4.1
+torchaudio==0.10.1
 torchvision
 tqdm==4.64.0
 typing_extensions==4.2.0
 Werkzeug==2.1.1
 zipp==3.8.0
+opencv-python
+scipy>=0.17.0
+scikit-image
+numba
